report: §5.4's open question is answered, and it promotes three observations from rule to mechanism
The report asked valhalla-dev one yes/no question: for a value class whose payload fits one word,
is the absence of a NULL_FREE_NON_ATOMIC field layout because no valid layout exists, or because
the atomic layout supersedes it? Frederic Parain answered on 2026-08-27, and the answer is neither.
Quoted verbatim against the archive; every quote below was checked against the thread mbox.

  "Non-atomicity requires an explicit opt-in at the declaration site. The author of a value class
   must indicate that the class supports non-atomic accesses by annotating it with
   @jdk.internal.vm.annotation.LooselyConsistentValue. Without this annotation, the JVM will not
   generate a NULL_FREE_NON_ATOMIC layout for the class."

None of the probed carriers declares it, so the column is a layout never requested. Both readings
this report offered are retired, and the `?` glyph -- "not emitted, undecidable here" since the
fifth pass -- becomes `opt-in`.

Two further observations that had been recorded as rules now have mechanisms, and they are
different mechanisms:

1. The indirect array evidence was not supersession either. A non-atomic array needs the element
   class declared LooselyConsistent AND the factory to request one; "if the first condition is not
   met, the factory may still return an atomic array. This remains compliant with the requested
   semantics because it provides stronger guarantees." The probe met only the second condition,
   which is exactly what it observed and could not explain.

2. NULLABLE_NON_ATOMIC's missing size ceiling, recorded with no mechanism at all, is the layout for
   non-static strict final fields (JEP 539), whose write and read phases cannot overlap, so
   "atomicity is not an issue" and they flatten "without hardware-imposed size limitations". That
   also supplies the mechanism behind "a field flattens only inside a value class", which §5.4 